[workspace]
resolver = "3"
members = [
    "perlmod",
    "perlmod-macro",
    "perlmod-test",
]
exclude = [
    "build",
]

[workspace.package]
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://git.proxmox.com/?p=perlmod.git"
