[package]
name = "perlmod-macro"
version = "0.6.0"
authors = ["Wolfgang Bumiller <w.bumiller@proxmox.com>"]
edition = "2021"
build = "build.rs"
license = "Apache-2.0 OR MIT"
categories = [ "API bindings" ]
keywords = [ "ffi", "perl" ]
description = "perl package macros to create perl package bindings from rust at compile time"

exclude = [ "debian" ]

[badges]
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ] }

[dev-dependencies]
perlmod = { path = "../perlmod" }
