[package]
name = "perlmod-macro"
version = "0.8.2"
build = "build.rs"
categories = [ "API bindings" ]
keywords = [ "ffi", "perl" ]
description = "perl package macros to create perl package bindings from rust at compile time"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

exclude = [ "debian" ]

[badges]
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ] }

[dev-dependencies]
perlmod = { path = "../perlmod" }
