[package]
name = "perlmod-macro"
version = "0.8.4"
build = "build.rs"
categories = [ "API bindings" ]
keywords = [ "ffi", "perl" ]
description = "perl package macros to create perl package bindings from rust at compile time"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

exclude = [ "debian" ]

[badges]
maintenance = { status = "experimental" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [ 'cfg(perlmod, values("multiplicity"))' ] }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = [ "full" ] }

[dev-dependencies]
perlmod = { path = "../perlmod" }
