[package]
name = "perlmod-test"
version = "0.1.0"
authors = ["Wolfgang Bumiller <w.bumiller@proxmox.com>"]
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0"
perlmod = { path = "../perlmod", features = [ "exporter" ] }
serde = { version = "1.0", features = [ "derive" ] }
