[package]
name = "perlmod"
version = "0.1.0"
authors = ["Wolfgang Bumiller <w.bumiller@proxmox.com>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0 OR MIT"
categories = [ "API bindings" ]
keywords = [ "ffi", "perl" ]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bitflags = "1.2.1"
libc = "0.2"
perlmod-macro = { path = "../perlmod-macro", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["exporter"]
exporter = ["perlmod-macro"]

[build-dependencies]
cc = "1.0.46"
