[package]
name = "perlmod"
version = "0.5.3"
authors = ["Wolfgang Bumiller <w.bumiller@proxmox.com>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0 OR MIT"
categories = [ "API bindings" ]
keywords = [ "ffi", "perl" ]
description = "ffi & serde code for limited interaction with perl code"

exclude = [ "debian" ]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bitflags = "1.2.1"
libc = "0.2"
perlmod-macro = { path = "../perlmod-macro", optional = true, version = "0.3.2" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[features]
default = ["exporter"]
exporter = ["perlmod-macro"]

[build-dependencies]
cc = "1.0.46"
