[package]
name = "perlmod"
version = "0.14.0"
build = "build.rs"
categories = [ "API bindings" ]
keywords = [ "ffi", "perl" ]
description = "ffi & serde code for limited interaction with perl code"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

exclude = [ "debian" ]

[badges]
maintenance = { status = "experimental" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [ 'cfg(perlmod, values("multiplicity"))' ] }

[dependencies]
bitflags = "2"
libc = "0.2"
serde = "1.0"

perlmod-macro = { path = "../perlmod-macro", optional = true, version = "0.10.0" }

[features]
default = ["exporter"]
exporter = ["perlmod-macro"]

[build-dependencies]
cc = "1.2"
