[package]
name = "testlib"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0"
perlmod = { path = "../perlmod", features = [ "exporter" ] }
serde = { version = "1.0", features = [ "derive" ] }
